--- a/css/modules/headline.css
+++ b/css/modules/headline.css
@@ -5,7 +5,7 @@
 
   &--large {
     font-size: 3.6rem;
-    @include atSmall {
+    @mixin atSmall {
       font-size: 6.25rem;
     }
   }
@@ -18,7 +18,7 @@
   &--medium {
     font-size: 1.9rem;
     margin-bottom: 0.75rem;
-    @include atSmall {
+    @mixin atSmall {
       font-size: 3.125rem;
     }
   }
@@ -33,7 +33,7 @@
   &--small {
     font-size: 1.2rem;
     margin-bottom: 1.9rem;
-    @include atSmall {
+    @mixin atSmall {
       font-size: 1.6875rem;
     }
   }
