--- a/css/modules/hero-slider.css
+++ b/css/modules/hero-slider.css
@@ -9,7 +9,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
 
-    @include atMedium {
+    @mixin atMedium {
       padding-top: 130px;
       padding-bottom: 130px;
     }
@@ -25,7 +25,7 @@
     background-color: rgba(0, 0, 0, 0.68);
     padding: 40px;
     color: #fff;
-    @include atMedium {
+    @mixin atMedium {
       width: 50%;
     }
   }
@@ -40,7 +40,7 @@
   margin: 0;
   text-align: center;
   top: 15px;
-  @include atMedium {
+  @mixin atMedium {
     top: 50px;
   }
 }
@@ -84,7 +84,7 @@
   margin: 0;
   text-align: center;
   top: 15px;
-  @include atMedium {
+  @mixin atMedium {
     top: 50px;
   }
 
