--- a/css/modules/page-banner.css
+++ b/css/modules/page-banner.css
@@ -2,7 +2,7 @@
   background-color: #000;
   padding: 80px 0 40px 0;
   position: relative;
-  @include atSmall {
+  @mixin atSmall {
     padding: 130px 0 60px 0;
   }
 
@@ -12,18 +12,18 @@
   }
 
   &__title {
-    font-family: "Roboto Condensed", sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
     font-size: 3.6rem;
     margin: 0 0 1rem 0;
-    color: #fff;
-    @include atSmall {
+    color: #FFF;
+    @mixin atSmall {
       font-size: 5rem;
     }
   }
 
   &__bg-image {
-    opacity: 0.33;
+    opacity: .33;
     background-size: cover;
     position: absolute;
     top: 0;
@@ -36,8 +36,8 @@
     font-weight: 300;
     font-size: 1.2rem;
     line-height: 1.3;
-    color: #ededed;
-    @include atSmall {
+    color: #EDEDED;
+    @mixin atSmall {
       font-size: 1.65rem;
     }
   }
