--- a/css/modules/page-links.css
+++ b/css/modules/page-links.css
@@ -3,7 +3,7 @@
   z-index: 1;
   background-color: $beige;
   margin: 0 0 40px 0;
-  @include atSmallMedium {
+  @mixin atSmallMedium {
     margin: 0 0 40px 20px;
     width: 300px;
     float: right;
@@ -15,17 +15,18 @@
     text-align: center;
     padding: 20px 0;
     background-color: $mainBlue;
-    color: #fff;
+    color: #FFF;
 
-    a {
-      color: #fff;
-      text-decoration: none;
-      background-color: $mainBlue;
-    }
+      a {
+        color: #FFF;
+        text-decoration: none;
+        background-color: $mainBlue;
+      }
+
   }
 
   li {
-    border-top: 1px solid adjust-color($beige, $lightness: -14%);
+    border-top: 1px solid color($beige l(-14%));
   }
 
   li:first-child {
@@ -35,7 +36,7 @@
   &__active,
   & .current_page_item {
     text-align: center;
-    background-color: scale-color($beige, $lightness: -7%, $saturation: -10%);
+    background-color: color($beige blackness(+11%) s(+50%));
     color: $mainBlue;
     font-weight: bold;
   }
@@ -46,11 +47,11 @@
     padding: 17px 10px;
     text-decoration: none;
     color: $mainBlue;
-    transition: all 0.3s;
+    transition: all .3s;
   }
 
   li a:hover {
-    color: adjust-color($mainBlue, $lightness: -6%);
-    background-color: scale-color($beige, $lightness: -9%, $saturation: -12%);
+    color: color($mainBlue b(+6%));
+    background-color: color($beige blackness(+18%) s(+65%));
   }
 }
